Closed
Bug 244178
Opened 22 years ago
Closed 22 years ago
Crash reloading gmail mailbox page
Categories
(Core :: DOM: Navigation, defect)
Core
DOM: Navigation
Tracking
()
RESOLVED
FIXED
People
(Reporter: jst, Assigned: jst)
References
Details
(Keywords: crash, regression)
Attachments
(1 file)
|
1.77 KB,
patch
|
bzbarsky
:
review+
darin.moz
:
superreview+
|
Details | Diff | Splinter Review |
When logged into gmail, mozilla (trunk only) will crash if you reload the page.
This is a regression from the recent nsWyciwygChannel changes I made where the
wyciwyg channel now stores the data in the cache as UTF-16, and the channel
actually advertices its charset. This caused child-frames of pages that are
loaded from a wyciwyg channel to assume that their charset is UTF-16 (unless
otherwise specified in the http channel etc), and this exposed a bug in
nsScanner::Append() where it in this case didn't malloc a big enough buffer for
the data it was given (see bug 244177).
We should do two things here, we should make the scanner code not crash (by
fixing bug 244177), and we should also make a document not take the charset from
its parent if its parent is loaded from a wyciwyg channel since there's no
relation between their charsets any more, at all).
| Assignee | ||
Comment 1•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #148950 -
Attachment description: Don't advertise the charset of a docshell that's loaded from a wyciwyg: URI ( → Don't advertise the charset of a docshell that's loaded from a wyciwyg: URI (diff -w)
Attachment #148950 -
Flags: superreview?(darin)
Attachment #148950 -
Flags: review?(bzbarsky)
Updated•22 years ago
|
Comment 2•22 years ago
|
||
Comment on attachment 148950 [details] [diff] [review]
Don't advertise the charset of a docshell that's loaded from a wyciwyg: URI (diff -w)
s/advertice/advertise/ in the comment, and r=bzbarsky.
Attachment #148950 -
Flags: review?(bzbarsky) → review+
| Assignee | ||
Comment 3•22 years ago
|
||
*** Bug 243639 has been marked as a duplicate of this bug. ***
Comment 4•22 years ago
|
||
Comment on attachment 148950 [details] [diff] [review]
Don't advertise the charset of a docshell that's loaded from a wyciwyg: URI (diff -w)
sr=darin
Attachment #148950 -
Flags: superreview?(darin) → superreview+
| Assignee | ||
Comment 5•22 years ago
|
||
Fixed.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 6•22 years ago
|
||
*** Bug 243269 has been marked as a duplicate of this bug. ***
Comment 7•22 years ago
|
||
*** Bug 245368 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•