Fixing regression bug 244178. Don't advertise the charset of a docshell that was loaded from a wyciwyg channel since the stored charset has no relationship to the original charset any more. r=bzbarsky@mit.edu, sr=darin@meer.net